--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Irving Didier <irvingdidier.sarmiento@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "hbs": "^4.0.1"
   }
 }
